# ImOS2

./: .gitignore  README.md  sdkconfig  sdkconfig.old  temp.h
main/: CMakeLists.txt  app_manager.c  app_manager.h  gui.c  gui.h  idf_component.yml  launcher.c  launcher.h  m5stack-tab5-lvgl.c  music.c  music.h  os.c  os.h  settings.c  settings.h  window_manager.c
main/apps/file_manager/: file_manager.c  file_manager.h
main/apps/launcher/: launcher.c
main/apps/music/: music.c  music.h
main/apps/settings/: settings.c  settings.h
main/assets/: cursor.c  harmonyos_sans_20.c
main/control_center/: control_center.c  control_center.h
main/hals/: hal.c  hal.h  hal_audio.c  hal_display.c  hal_display.h  hal_usb.c  hal_usb.h
main/managers/: app_manager.c  window_manager.c  window_manager.h
main/theme/: theme_engine.c  theme_engine.h
ref/: hal.c
ref/main/hal/components/: hal_audio.cpp
