idf_component_register(SRCS "m5stack-tab5-lvgl.c"
                            "gui.c"
                            "hals/hal.c"
                            "os.c"
                            "managers/window_manager.c"
                            "managers/app_manager.c"
                            "apps/launcher/launcher.c"
                            "apps/settings/settings.c"
                            "apps/music/music.c"
                            "hals/hal_audio.c"
                            "hals/hal_sdcard.c"
                            "control_center/control_center.c"
                    INCLUDE_DIRS ".")
